--- a/src/style/main.css
+++ b/src/style/main.css
@@ -9,16 +9,6 @@
   --container-size: 940px;
 }
 
-/* 버튼 스타일 */
-button,
-a {
-  width: 100px;
-  padding: 20px;
-  border: 1px solid currentColor;
-  border-radius: 10px;
-  display: inline-block;
-}
-
 body {
   font-family: "Noto Sans KR", sans-serif;
 }
@@ -36,7 +26,6 @@ body {
 .header {
   background-color: yellow;
   height: 10vh;
-  padding: 0 50px;
 }
 
 /* 비주얼 */
@@ -51,13 +40,26 @@ body {
   background-color: skyblue;
   height: 60vh;
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-start; /*메인 축*/
-  align-items: stretch; /*교차 축*/
+  flex-flow: row nowrap;
+  justify-content: space-between; /*메인 축 정렬*/
+  align-items: stretch; /*교차 축 정렬*/
+  padding: 28px 16px 36px;
 }
 
 .group {
   border: 1px solid red;
+}
+
+.group1 {
+  width: 250px;
+}
+
+.group2 {
+  width: 380px;
+}
+
+.group3 {
+  width: 190px;
 }
 
 /* 슬로건 */
