--- a/src/style/main.css
+++ b/src/style/main.css
@@ -52,6 +52,7 @@ body {
 
 .group1 {
   width: 250px;
+  order: 1;
 }
 
 .group2 {
@@ -60,6 +61,7 @@ body {
 
 .group3 {
   width: 190px;
+  order: -1;
 }
 
 /* 슬로건 */
