margin을 활용한 space-evenly

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -40,26 +40,28 @@ body {
   background-color: skyblue;
   /* border: 10px solid black; */
   display: flow-root;
-  min-height: 442px;
+  min-height: 450px;
+  padding: 0 15px;
 }
 
 .group {
   border: 1px solid red;
+  margin: 0 15px;
 }
 
-.group1 {
+.group:nth-child(1) {
   width: 250px;
   float: left;
   background-color: orange;
 }
 
-.group2 {
+.group:nth-child(2) {
   width: 380px;
   float: left;
   background-color: silver;
 }
 
-.group3 {
+.group:nth-child(3) {
   width: 190px;
   float: left;
 }
