--- a/src/style/main.css
+++ b/src/style/main.css
@@ -44,26 +44,31 @@ body {
   padding: 0 15px;
 }
 
+.group-wrapper {
+  float: right;
+  border: 1px solid green;
+}
+
 .group {
   border: 1px solid red;
   margin: 0 15px;
 }
 
-.group:nth-child(1) {
+.group1 {
   width: 250px;
   float: left;
   background-color: orange;
 }
 
-.group:nth-child(2) {
+.group2 {
   width: 380px;
   float: left;
   background-color: silver;
 }
 
-.group:nth-child(3) {
+.group3 {
+  background-color: hotpink;
   width: 190px;
-  float: left;
 }
 
 /* 슬로건 */
