--- a/src/style/main.css
+++ b/src/style/main.css
@@ -40,29 +40,26 @@ body {
   background-color: skyblue;
   /* border: 10px solid black; */
   display: flow-root;
-  min-height: 450px;
-  padding: 0 15px;
-}
-
-.group-wrapper {
-  float: right;
-  border: 1px solid green;
+  min-height: 442px;
+  padding: 28px 16px 36px;
 }
 
 .group {
   border: 1px solid red;
-  margin: 0 15px;
+  float: left;
+}
+
+.group:nth-child(n + 2) {
+  margin-left: 44px;
 }
 
 .group1 {
   width: 250px;
-  float: left;
   background-color: orange;
 }
 
 .group2 {
   width: 380px;
-  float: left;
   background-color: silver;
 }
 
@@ -86,4 +83,13 @@ body {
 .footer-inner {
   background-color: yellow;
   height: 10vh;
+}
+
+/* flex를 지원하는 웹브라우저를 위한 스타일 */
+@supports (display: flex) {
+  .main {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+  }
 }
