--- a/src/style/main.css
+++ b/src/style/main.css
@@ -2,6 +2,7 @@
   --container-size: 940px;
 }
 
+/* 기본 박스 사이징 설정 */
 *,
 *::before,
 *::after {
@@ -9,10 +10,11 @@
 }
 
 body {
+  margin: 0;
   font-family: "SUIT Variable", sans-serif;
   background-color: #ccc;
-  background-image: url(/src/images/bg_flower.png),
-    linear-gradient(to bottom, #aaa 0%, #ccc 30%);
+  background-image: url(/images/bg_flower.png),
+    linear-gradient(to bottom, #aaa 0%, #ccc 30%, #eee 50%, #fff 100%);
   background-repeat: no-repeat;
   background-position: 50% 0, 0 0;
 }
@@ -37,13 +39,39 @@ body {
 
 /* 로고 */
 .logo {
-  background-color: orange;
+  /* background-color: orange; */
   position: absolute;
   top: 45px;
   left: 60px;
 }
 
 /* 비주얼 */
+@keyframes moveEffect {
+  0% {
+    font-size: 12px;
+    top: 0;
+    inset-block-start: 0;
+    left: 0;
+    inset-inline-start: 0;
+  }
+  100% {
+    font-size: 24px;
+    top: 75px;
+    inset-block-start: 75px;
+    left: 400px;
+    inset-inline-start: 400px;
+  }
+}
+
+.visual-text {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  animation-name: moveEffect;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
+  position: absolute;
+  z-index: 1;
+}
+
 .visual {
   height: 120px;
   block-size: 120px;
@@ -64,14 +92,14 @@ body {
 }
 
 .visual::before {
-  background-image: url(/src/images/ani_flower_01.png),
-    url(/src/images/ani_flower_02.png);
+  background-image: url(/images/ani_flower_01.png),
+    url(/images/ani_flower_02.png);
   background-position: 0 -10px, 600px 10px;
 }
 
 .visual::after {
-  background-image: url(/src/images/ani_flower_03.png),
-    url(/src/images/ani_flower_04.png);
+  background-image: url(/images/ani_flower_03.png),
+    url(/images/ani_flower_04.png);
   background-position: 300px 0px, 800px 30px;
 }
 
@@ -96,16 +124,16 @@ body {
 
 .group1 {
   width: 250px;
-  background-color: orange;
+  /* background-color: orange; */
 }
 
 .group2 {
   width: 380px;
-  background-color: silver;
+  /* background-color: silver; */
 }
 
 .group3 {
-  background-color: hotpink;
+  /* background-color: hotpink; */
   width: 190px;
 }
 
