--- a/src/style/main.css
+++ b/src/style/main.css
@@ -49,11 +49,23 @@ body {
 @keyframes moveEffect {
   0% {
     font-size: 12px;
-    margin: 0;
+    translate: 0 0;
   }
   100% {
     font-size: 24px;
-    margin: 75px 0 0 400px;
+    translate: 320px 75px;
+  }
+}
+
+@keyframes fadeEffect {
+  0% {
+    opacity: 1;
+  }
+  /* 50% {
+    opacity: 0;
+  } */
+  100% {
+    opacity: 0;
   }
 }
 
@@ -62,7 +74,9 @@ body {
   animation-name: moveEffect;
   animation-duration: 5s;
   animation-fill-mode: forwards;
-  background-color: lime;
+  display: inline-block;
+  z-index: 1;
+  position: relative;
 }
 
 .visual {
@@ -82,6 +96,10 @@ body {
   top: 0;
   left: 0;
   background-repeat: no-repeat;
+  animation-name: fadeEffect;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 .visual::before {
@@ -94,6 +112,7 @@ body {
   background-image: url(/images/ani_flower_03.png),
     url(/images/ani_flower_04.png);
   background-position: 300px 0px, 800px 30px;
+  animation-delay: 2s;
 }
 
 /* 메인 */
