--- a/src/components/css/login.css
+++ b/src/components/css/login.css
@@ -10,8 +10,10 @@ body {
 
 /* 로그인 */
 .login {
+  width: 500px;
   --box-start-color: var(--orange-100);
   --box-end-color: var(--orange-200);
+  --box-shadow-color: var(--gray-700);
 
   background-image: radial-gradient(
     circle at right top,
@@ -20,5 +22,73 @@ body {
   );
   border-radius: 5px;
   padding: 10px;
-  box-shadow: 0 0 0 0 black;
+  box-shadow: 5px 5px 0 0 var(--box-shadow-color);
+}
+
+.login-title {
+  --color: var(--yellow);
+
+  color: var(--color);
+  margin: 0;
+  font-size: 0.9375rem;
+}
+
+.login-form {
+  background-color: #fff;
+  border-radius: 5px 5px 0 0;
+  margin-top: 20px;
+  padding: 10px;
+
+  fieldset {
+    border: 0;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    height: 70px;
+    border-bottom: 1px solid #ccc;
+  }
+
+  div {
+    margin-bottom: 5px;
+  }
+
+  label {
+    display: inline-block;
+    width: 4em;
+  }
+
+  input {
+    width: calc(100% - 145px);
+    border: 1px solid #aaa;
+    border-radius: 3px;
+    padding: 1px 1px 1px 8px;
+    height: 24px;
+  }
+}
+
+.login-button {
+  border: 0;
+  background-color: var(--orange-200);
+  color: #fff;
+  border-radius: 5px;
+  padding: 16px 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.member-sign {
+  background-color: #fff;
+  list-style: none;
+  margin: 0;
+  padding: 10px;
+  border-radius: 0 0 5px 5px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
