--- a/src/components/login.html
+++ b/src/components/login.html
@@ -22,7 +22,7 @@
       <h2 class="login-title">로그인</h2>
       <form action="/" class="login-form">
         <fieldset>
-          <legend>회원 로그인 폼</legend>
+          <legend class="sr-only">회원 로그인 폼</legend>
           <div role="group" class="user-email">
             <!-- 아이디 입력 서식 -->
             <label for="userEmail">아이디</label>
