--- a/src/components/css/login.css
+++ b/src/components/css/login.css
@@ -1,94 +1,128 @@
+@import url(/style/reset.css);
 @import url(/style/theme.css);
+@import url(/style/base.css);
 
-:root {
-  --base-font-famaily: "SUIT Variable", sans-serif;
+/* input 컴포넌트 */
+.form-input {
+  --spacing: 10px;
+  --border-color: var(--gray-500);
+  --radius: 3px;
+
+  display: flex;
+  flex-flow: row nowrap;
+  gap: var(--spacing);
+
+  label {
+    white-space: nowrap;
+  }
+
+  input {
+    flex-grow: 1;
+    border: 1px solid var(--border-color);
+    border-radius: var(--radius);
+    padding: 1px 1px 1px 8px;
+    height: 24px;
+    block-size: 24px;
+    width: 100%;
+  }
 }
 
-body {
-  font-family: var(--base-font-famaily);
+/* button 컴포넌트 */
+.button {
+  --bg-color: var(--orange-200);
+  --color: var(--white);
+  --radius: 3px;
+
+  border: 0;
+  padding: 16px 10px;
+  background-color: var(--bg-color);
+  color: var(--color);
+  border-radius: var(--radius);
+  white-space: nowrap;
+
+  &:focus {
+    outline: 0;
+  }
+}
+
+/* 링크 텍스트 컴포넌트 (아이콘 유형) */
+.icon-link {
+  --color: var(--orange-200);
+
+  [class*="fas"] {
+    color: var(--color);
+    padding-right: 0.25em;
+    padding-inline-end: 0.25em;
+  }
 }
 
 /* 로그인 */
 .login {
-  width: 500px;
-  --box-start-color: var(--orange-100);
-  --box-end-color: var(--orange-200);
-  --box-shadow-color: var(--gray-700);
+  /* 로그인 변수 */
+  --start-color: var(--orange-100);
+  --end-color: var(--orange-200);
+  --shadow-color: var(--gray-700);
+  --spacing: 10px;
+  --radius: 5px;
+  --shadow-depth: 5px;
+  --bg-color: var(--white);
+  --border-color: var(--gray-500);
 
   background-image: radial-gradient(
     circle at right top,
-    var(--box-start-color),
-    var(--box-end-color)
+    var(--start-color),
+    var(--end-color)
   );
-  border-radius: 5px;
-  padding: 10px;
-  box-shadow: 5px 5px 0 0 var(--box-shadow-color);
-}
+  border-radius: var(--radius);
+  padding: var(--spacing);
+  box-shadow: var(--shadow-depth) var(--shadow-depth) 0 0 var(--shadow-color);
 
-.login-title {
-  --color: var(--yellow);
+  /* 로그인 제목 */
+  .login-title {
+    --color: var(--yellow);
 
-  color: var(--color);
-  margin: 0;
-  font-size: 0.9375rem;
-}
-
-.login-form {
-  background-color: #fff;
-  border-radius: 5px 5px 0 0;
-  margin-top: 20px;
-  padding: 10px;
-
-  fieldset {
-    border: 0;
-    padding: 0;
+    color: var(--color);
     margin: 0;
-    position: relative;
-    height: 70px;
-    border-bottom: 1px solid #ccc;
+    font-size: 0.9375rem;
   }
 
-  div {
-    margin-bottom: 5px;
+  /* 로그인 폼 */
+  .login-form {
+    margin-top: var(--spacing);
+    margin-block-start: var(--spacing);
+    background-color: var(--bg-color);
+    border-radius: var(--radius) var(--radius) 0 0;
+    padding: var(--spacing);
+
+    fieldset {
+      border-bottom: 1px solid var(--border-color);
+      display: flex;
+      flex-flow: row nowrap;
+      gap: var(--spacing);
+      padding-bottom: var(--spacing);
+      padding-block-end: var(--spacing);
+    }
+
+    .login-input-group {
+      flex-grow: 1;
+      display: flex;
+      flex-flow: column nowrap;
+      gap: var(--spacing);
+
+      label {
+        min-width: 4em;
+        min-inline-size: 4em;
+      }
+    }
   }
 
-  label {
-    display: inline-block;
-    width: 4em;
-  }
-
-  input {
-    width: calc(100% - 145px);
-    border: 1px solid #aaa;
-    border-radius: 3px;
-    padding: 1px 1px 1px 8px;
-    height: 24px;
-  }
-}
-
-.login-button {
-  border: 0;
-  background-color: var(--orange-200);
-  color: #fff;
-  border-radius: 5px;
-  padding: 16px 10px;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-.member-sign {
-  background-color: #fff;
-  list-style: none;
-  margin: 0;
-  padding: 10px;
-  border-radius: 0 0 5px 5px;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-
-  a {
-    color: inherit;
-    text-decoration: none;
+  /* 멤버 서비스 관련 링크 */
+  .member-sign {
+    background-color: var(--bg-color);
+    border-radius: 0 0 var(--radius) var(--radius);
+    padding: 0 var(--spacing) var(--spacing) var(--spacing);
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
   }
 }
