--- a/src/components/css/login.css
+++ b/src/components/css/login.css
@@ -11,20 +11,26 @@
   display: flex;
   flex-flow: row nowrap;
   gap: var(--spacing);
+  border: 1px solid white;
 
   label {
     white-space: nowrap;
   }
 
+  /* border: 1px solid var(--border-color); */
   input {
     flex-grow: 1;
-    border: 1px solid var(--border-color);
+    border: 0;
     border-radius: var(--radius);
     padding: 1px 1px 1px 8px;
     height: 24px;
     block-size: 24px;
     width: 100%;
   }
+}
+
+.form-input:focus-within {
+  border-bottom: 1px solid var(--orange-100);
 }
 
 /* button 컴포넌트 */
@@ -42,6 +48,10 @@
 
   &:focus {
     outline: 0;
+  }
+
+  &:focus-visible {
+    outline: 2px solid green;
   }
 }
 
