--- a/src/components/css/navigation.css
+++ b/src/components/css/navigation.css
@@ -6,16 +6,46 @@ body {
   margin: 50px;
 }
 
+.header {
+  position: relative;
+}
+
+.logo {
+  position: absolute;
+  top: 15px;
+  left: 30px;
+}
+
 .menu {
   background: orangered linear-gradient(to bottom, orange, orangered, orange);
   box-shadow: 0 -5px 0 0 #121212;
-  color: #fff;
+  color: #000;
   display: flow-root;
   padding-left: 225px;
+  padding-inline-start: 225px;
 
   > li {
     float: left;
-    border-left: 2px solid white;
+    border-left: 2px solid #fff;
+    position: relative;
+  }
+
+  .is--active {
+    button {
+      color: yellow;
+
+      &::after {
+        content: "";
+        background: #000;
+        display: block;
+        height: 1px;
+        block-size: 1px;
+      }
+    }
+
+    ul {
+      display: block;
+    }
   }
 
   button {
@@ -23,13 +53,36 @@ body {
     font-weight: 700;
     padding: 0 24px;
     height: 60px;
+    block-size: 60px;
+    line-height: 60px;
     background: transparent;
     border: 0;
     color: #fff;
     text-shadow: 1px 1px 0 #000, -1px -1px 0 #000;
+
+    span {
+      display: block;
+    }
   }
+
+  /* button[aria-expanded="true"]{
+    color: lime;
+  } */
 
   ul {
     display: none;
+    position: absolute;
+    top: 65px;
+    left: 0;
+    background: pink;
+    white-space: nowrap;
+
+    li {
+      display: inline-block;
+    }
   }
+
+  /* ul[aria-hidden="false"]{
+    display: block;
+  } */
 }
