--- a/src/components/css/navigation.css
+++ b/src/components/css/navigation.css
@@ -30,6 +30,14 @@ body {
     position: relative;
   }
 
+  > li:nth-child(-n + 3) ul {
+    left: 0;
+  }
+
+  > li:nth-child(n + 4) ul {
+    right: 0;
+  }
+
   .is--active {
     button {
       color: yellow;
@@ -44,7 +52,7 @@ body {
     }
 
     ul {
-      display: block;
+      display: flex;
     }
   }
 
@@ -73,12 +81,17 @@ body {
     display: none;
     position: absolute;
     top: 65px;
-    left: 0;
-    background: pink;
-    white-space: nowrap;
 
     li {
       display: inline-block;
+      white-space: nowrap;
+      margin-right: 4px;
+    }
+
+    a {
+      display: flex;
+      padding: 8px;
+      gap: 8px;
     }
   }
 
