--- a/src/components/checkbox.html
+++ b/src/components/checkbox.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>문서 제목</title>
+    <title>체크박스 컴포넌트</title>
     <link
       href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT/fonts/variable/woff2/SUIT-Variable.css"
       rel="stylesheet"
@@ -14,9 +14,17 @@
       integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/" />
+    <link rel="stylesheet" href="/components/css/checkbox.css" />
   </head>
   <body>
-    <h1>문서 제목</h1>
+    <h1><a href="/">체크박스 컴포넌트</a></h1>
+    <div class="form-checkBox">
+      <input
+        type="checkbox"
+        id="saveLoginInformation"
+        name="saveLoginInformation"
+      />
+      <label for="saveLoginInformation">간편로그인 정보 저장</label>
+    </div>
   </body>
 </html>
