--- a/src/components/checkbox.html
+++ b/src/components/checkbox.html
@@ -26,5 +26,17 @@
       />
       <label for="saveLoginInformation">간편로그인 정보 저장</label>
     </div>
+
+    <div role="tooltip" class="tooltip">
+      <span
+        tabindex="0"
+        class="tooltip-icon fas fa-info"
+        aria-label="간편 로그인 정보 저장 안내 사항"
+      ></span>
+      <strong class="tooltip-content">
+        로그인한 계정의 정보가 저장됩니다. 개인정보 보호를 위해 개인 기기에서만
+        사용해 주세요.
+      </strong>
+    </div>
   </body>
 </html>
