--- a/src/components/tabs.html
+++ b/src/components/tabs.html
@@ -21,11 +21,34 @@
 
     <div class="tabs">
       <div class="tab-list">
-        <div class="tab is-selected">공지사항</div>
-        <div class="tab">자료실</div>
+        <div
+          class="tab is-selected"
+          role="tab"
+          id="tab1"
+          aria-controls="tab-panel1"
+          aria-selected="true"
+          tabindex="0"
+        >
+          공지사항
+        </div>
+        <div
+          class="tab"
+          role="tab"
+          id="tab2"
+          aria-controls="tab-panel2"
+          aria-selected="false"
+          tabindex="0"
+        >
+          자료실
+        </div>
       </div>
 
-      <div class="tab-panel is-selected">
+      <div
+        class="tab-panel is-selected"
+        role="tabpanel"
+        aria-labelledby="tab1"
+        id="tab-panel1"
+      >
         <div class="tab-panel-item">
           <a href="/"
             ><span class="fas fa-circle-dot"></span>HTML의 모든것을 알려주마
@@ -64,7 +87,12 @@
         <a href="/" class="tab-more"><span class="fas fa-plus"></span>더보기</a>
       </div>
 
-      <div class="tab-panel">
+      <div
+        class="tab-panel"
+        role="tabpanel"
+        aria-labelledby="tab2"
+        id="tab-panel2"
+      >
         <div class="tab-panel-item">
           <a href="/"
             ><span class="fas fa-circle-dot"></span>웹접근성 향상을 위한 HTML
