--- a/src/components/css/cardbox.css
+++ b/src/components/css/cardbox.css
@@ -23,9 +23,6 @@
 
 @media (min-width: 1025px) {
   .container {
-    max-width: 1440px;
-    margin: 0 auto;
-    grid-auto-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-flow: column;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
 }
