--- a/src/components/webcafe.html
+++ b/src/components/webcafe.html
@@ -12,10 +12,18 @@
     <link rel="stylesheet" href="./../theory/css/defalut.css" />
     <link rel="stylesheet" href="/components/css/webcafe.css" />
     <script type="module" src="./../theory/js/grid-guide.js"></script>
+    <script type="module" src="/components/js/navigation.js"></script>
   </head>
   <body>
     <div class="container">
-      <div class="header yellow">헤더</div>
+      <div class="header yellow">
+        헤더
+        <button class="burger-button" type="button" aria-label="메인 메뉴 열기">
+          <span class="burger-bar burger-bar-top"></span>
+          <span class="burger-bar burger-bar-middle"></span>
+          <span class="burger-bar burger-bar-bottom"></span>
+        </button>
+      </div>
       <div class="navigation pink">
         <nav class="menu" aria-label="메인 메뉴">
           <div class="menu-item">
