--- a/src/components/css/webcafe.css
+++ b/src/components/css/webcafe.css
@@ -1,94 +1,97 @@
-@import url(/style/reset.css);
 @import url(/style/base.css);
-@import url(./grid.css);
+@import url(/theory/css/grid.css);
 
+/* 임시 레이아웃 */
 body {
   margin-top: 50px;
 }
 
-.header,
-.navigation,
-.footer {
-  height: 100px;
-  width: 100%;
-}
-
+/* 웹카페 반응형 레이아웃 */
 .container {
+  min-height: 100vh;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  min-height: 100vh;
-}
 
-.main {
-  flex: 1 0 auto;
-  max-width: 90%;
-  width: 100%;
-  gap: 24px;
+  .header,
+  .navigation,
+  .footer {
+    height: 100px;
+    block-size: 100px;
+    width: 100%;
+    inline-size: 100%;
+  }
+  .main {
+    max-width: 100%;
+    width: 90%;
+    flex: 1 0 auto;
+    gap: 24px;
+  }
 }
-
 .header {
   display: flex;
   flex-flow: row nowrap;
   justify-content: end;
 }
-
 /* 햄버거 버튼 */
 .burger-button {
+  margin: 100px;
   background: red;
-  padding: 0;
   border: 0;
+  padding: 0;
   width: 100px;
   height: 100px;
-  z-index: 10;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
+  position: relative;
 
   span {
     width: 100%;
     height: 20%;
-    background: #fff;
+    position: absolute;
+    background-color: #fff;
+    left: 0;
     border-radius: 20px;
     transition: all 200ms;
   }
 
   .burger-bar-top {
+    top: 0;
   }
-
   .burger-bar-middle {
+    top: 50%;
+    translate: 0 -50%;
   }
-
   .burger-bar-bottom {
+    top: 100%;
+    translate: 0 -100%;
   }
 }
 
+/* is-actvie 클래스가 있을 때 */
 .burger-button.is-active {
   overflow: hidden;
-  justify-content: center;
+
   span {
   }
 
   .burger-bar-top,
   .burger-bar-bottom {
+    top: 50%;
+    translate: 0 -50%;
   }
 
   .burger-bar-top {
-    translate: 0 100%;
     rotate: 45deg;
   }
 
   .burger-bar-middle {
-    translate: -100% 0;
+    translate: -100% -50%;
   }
 
   .burger-bar-bottom {
-    translate: 0 -100%;
     rotate: -45deg;
   }
 }
 
-/* navigation */
 .menu {
   position: fixed;
   background-color: orange;
