--- a/src/components/css/webcafe.css
+++ b/src/components/css/webcafe.css
@@ -1,72 +1,72 @@
+@import url(/style/reset.css);
 @import url(/style/base.css);
-@import url(/theory/css/grid.css);
+@import url(./grid.css);
 
-/* 임시 레이아웃 */
 body {
   margin-top: 50px;
 }
 
-/* 웹카페 반응형 레이아웃 */
+.header,
+.navigation,
+.footer {
+  height: 100px;
+  width: 100%;
+}
+
 .container {
-  min-height: 100vh;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-
-  .header,
-  .navigation,
-  .footer {
-    height: 100px;
-    block-size: 100px;
-    width: 100%;
-    inline-size: 100%;
-  }
-  .main {
-    max-width: 100%;
-    width: 90%;
-    flex: 1 0 auto;
-    gap: 24px;
-  }
+  min-height: 100vh;
 }
+
+.main {
+  flex: 1 0 auto;
+  max-width: 90%;
+  width: 100%;
+  gap: 24px;
+}
+
 .header {
   display: flex;
   flex-flow: row nowrap;
   justify-content: end;
 }
+
 /* 햄버거 버튼 */
 .burger-button {
-  margin: 100px;
   background: red;
-  border: 0;
   padding: 0;
+  border: 0;
   width: 100px;
   height: 100px;
-  position: relative;
+  z-index: 10;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100%;
 
   span {
     width: 100%;
     height: 20%;
-    position: absolute;
-    background-color: #fff;
-    left: 0;
+    background: #fff;
     border-radius: 20px;
     transition: all 200ms;
+    grid-area: 1 / 1 / 2 / 2; /*각각의 span의 자리를 잡아주기 위해 필요 없으면 하나로 뭉쳐짐*/
   }
 
   .burger-bar-top {
-    top: 0;
+    align-self: start;
   }
+
   .burger-bar-middle {
-    top: 50%;
-    translate: 0 -50%;
+    align-self: center;
   }
+
   .burger-bar-bottom {
-    top: 100%;
-    translate: 0 -100%;
+    align-self: end;
   }
 }
 
-/* is-actvie 클래스가 있을 때 */
 .burger-button.is-active {
   overflow: hidden;
 
@@ -75,8 +75,7 @@ body {
 
   .burger-bar-top,
   .burger-bar-bottom {
-    top: 50%;
-    translate: 0 -50%;
+    align-self: center;
   }
 
   .burger-bar-top {
@@ -84,7 +83,7 @@ body {
   }
 
   .burger-bar-middle {
-    translate: -100% -50%;
+    translate: -100% 0;
   }
 
   .burger-bar-bottom {
@@ -92,6 +91,7 @@ body {
   }
 }
 
+/* navigation */
 .menu {
   position: fixed;
   background-color: orange;
