--- a/src/components/webcafe.html
+++ b/src/components/webcafe.html
@@ -17,7 +17,8 @@
   <body>
     <div class="container">
       <div class="header yellow">
-        헤더
+        <div class="logo" aria-label="웹카페"></div>
+
         <button class="burger-button" type="button" aria-label="메인 메뉴 열기">
           <span class="burger-bar burger-bar-top"></span>
           <span class="burger-bar burger-bar-middle"></span>
